# minishell

./: .gitignore  CMakeLists.txt  Makefile  README.md  author  main.c
libft/: CMakeLists.txt  Makefile  bench_bruh.c  macros.asm  macros.s
libft/incl/: get_next_line.h  libft.h  linked_list.h  memmgmt.h  printf.h  printf_utils.h
libft/include/: ft_ctype.h  ft_libft.h  ft_llist.h  ft_math.h  ft_memory.h  ft_stdlib.h  ft_string.h  ft_unistd.h
libft/include/ft_stdio/: ft_printf.h  ft_printf_utils.h
libft/src/: ft_abs.c  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_checked_calloc.c  ft_checked_malloc.c  ft_dabs.c  ft_exit.c  ft_free.c  ft_isdigit.c  ft_isspace.c  ft_malloc.c  ft_max.c  ft_memcpy.c  ft_memset.c  ft_min.c  ft_nsplit.c  ft_nullcheck.c  ft_split.c  ft_strarr_append.c  ft_strarr_free.c  ft_strarr_size.c  ft_strchr.c  ft_strcmp.c  ft_strcpy.c  ft_strcpy.s  ft_strdup.c  ft_strempty.c  ft_strends_with.c  ft_strip_chars.c  ft_stris_empty.c  ft_strjoin.c  ft_strlen.c  ft_strlen.s  ft_strtrim.c  ft_substr.c
libft/src/collections/linked_list/: linked_list_clear.c  linked_list_free.c  linked_list_iter.c  linked_list_new.c  linked_list_push.c  linked_list_push_back.c  linked_list_size.c
libft/src/ft_ctype/: ctype.mk  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_islower.c  ft_isprint.c  ft_isspace.c  ft_isupper.c  ft_tolower.c  ft_toupper.c
libft/src/ft_dllist/: dllist.mk
libft/src/ft_libft/: ft_intlen.c  ft_intlen_base.c  ft_itoa.c  ft_itoa_base.c  ft_nsplit.c  ft_split.c  ft_strarr_append.c  ft_strarr_size.c  ft_strempty.c  ft_strip_chars.c  ft_strjoin.c  ft_strjoin3.c  ft_strtrim.c  ft_substr.c  get_next_line.c  libft.mk
libft/src/ft_llist/: ft_llist_clear.c  ft_llist_free.c  ft_llist_iter.c  ft_llist_new.c  ft_llist_push_back.c  ft_llist_push_front.c  ft_llist_size.c  llist.mk
libft/src/ft_math/: ft_pow.c  math.mk
libft/src/ft_memory/: ft_bzero.c  ft_calloc.c  ft_checked_calloc.c  ft_checked_malloc.c  ft_free.c  ft_free_array.c  ft_malloc.c  ft_nullcheck.c  memory.mk
libft/src/ft_stdio/: stdio.mk
libft/src/ft_stdio/ft_printf/: ft_eprintf.c  ft_fprintf.c  ft_printf.c  ft_snprintf.c  ft_vfprintf.c  ft_vprintf.c
libft/src/ft_stdio/ft_printf/buf/: buf_chars_printed.c  buf_flush.c  buf_putchar.c  buf_putchars.c  buf_putstr.c  buf_putstri.c  buf_reset.c
libft/src/ft_stdio/ft_printf/buf/fd/: buf_fd_chars_printed.c  buf_fd_create.c  buf_fd_flush.c  buf_fd_putchar.c  buf_fd_putchars.c  buf_fd_putstr.c  buf_fd_putstri.c  buf_fd_reset.c
libft/src/ft_stdio/ft_printf/buf/str/: buf_str_chars_printed.c  buf_str_create.c  buf_str_flush.c  buf_str_putchar.c  buf_str_putchars.c  buf_str_putstr.c  buf_str_putstri.c  buf_str_reset.c
libft/src/ft_stdio/ft_printf/spec/: spec_base.c  spec_char.c  spec_charsprinted.c  spec_get.c  spec_ptr.c  spec_signed_int.c  spec_string.c  spec_unsigned_int.c
libft/src/ft_stdio/ft_printf/utils/: fmt_read.c  ft_inner_printf.c  ft_lltoa.c  ft_pf_atoi.c  ft_ulltoa.c  ft_ulltoa_base.c
libft/src/ft_stdlib/: ft_abs.c  ft_atoi.c  ft_dabs.c  ft_max.c  ft_min.c  stdlib.mk
libft/src/ft_string/: ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.asm  ft_memmove.c  ft_memset.c  ft_strchr.c  ft_strcmp.asm  ft_strcpy.asm  ft_strdup.asm  ft_strjoin.c  ft_strjoin3.c  ft_strlen.asm  ft_strncmp.c  ft_strnlen.c  ft_strnstr.c  ft_strrchr.c  string.mk
libft/src/ft_unistd/: ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_read.asm  ft_write.asm  unistd.mk
libft/src/get_next_line/: get_next_line.c
libft/src/printf/: ft_eprintf.c  ft_fprintf.c  ft_printf.c  ft_snprintf.c  ft_vfprintf.c  ft_vprintf.c
libft/src/printf/buf/: buf_chars_printed.c  buf_flush.c  buf_putchar.c  buf_putchars.c  buf_putstr.c  buf_putstri.c  buf_reset.c
libft/src/printf/buf/fd/: buf_fd_chars_printed.c  buf_fd_create.c  buf_fd_flush.c  buf_fd_putchar.c  buf_fd_putchars.c  buf_fd_putstr.c  buf_fd_putstri.c  buf_fd_reset.c
libft/src/printf/buf/str/: buf_str_chars_printed.c  buf_str_create.c  buf_str_flush.c  buf_str_putchar.c  buf_str_putchars.c  buf_str_putstr.c  buf_str_putstri.c  buf_str_reset.c
libft/src/printf/spec/: spec_base.c  spec_char.c  spec_charsprinted.c  spec_get.c  spec_ptr.c  spec_signed_int.c  spec_string.c  spec_unsigned_int.c
libft/src/printf/utils/: fmt_read.c  ft_inner_printf.c  ft_lltoa.c  ft_pf_atoi.c  ft_ulltoa.c  ft_ulltoa_base.c
project_files/incl/: builtins.h  ft_env.h  ft_errno.h  ft_exec.h  ft_lex.h  ft_parser.h  lex.h  minishell.h  utils.h
project_files/src/: TODO  ft_errno.c  main.c  utils.c
project_files/src/env/: env.c  env.mk  env_path.c  env_string.c
project_files/src/exec/: TODO.txt  builtin_search.c  exec.c  exec.mk  exec_builtins.c  exit_codes.c  fork.c  ft_utils.c  get_input.c  get_output.c  pipes.c  signals.c  utils.c
project_files/src/exec/builtins/: builtin_env.c  cd.c  echo.c  empty.c  env.c  exit.c  pwd.c
project_files/src/lex/: composite_str.c  ft_lex.c  lex.c  lex.mk  lex_chars.c  lex_is_char.c  lex_push.c  lex_read.c  lex_str.c  lex_token.c
project_files/src/parser/: count_commands.c  ft_parser.c  handle_token.c  parser.c  parser.mk  parser_command.c  parser_redirections.c  parser_utils.c
